[project]
name = "comfyui_naidgenerator"
description = "This extension helps generate images through NAI."
version = "1.0.8"
license = { file = "LICENSE" }
dependencies = ["python-dotenv", "argon2-cffi"]

[project.urls]
Repository = "https://github.com/micode64/ComfyUI_NAIDGenerator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "micode64"
DisplayName = "ComfyUI_NAIDGenerator"
Icon = ""
